@@ -32,14 +32,12 @@ import android.util.Pair;
 
 import com.android.internal.annotations.VisibleForTesting;
 import com.android.server.healthconnect.storage.request.AggregateParams;
+import com.android.server.healthconnect.storage.request.AggregateTableRequest;
 import com.android.server.healthconnect.storage.utils.StorageUtils;
 
-import java.com.android.server.healthconnect.storage.datatypehelpers.DeriveTotalCaloriesBurnedHelper;
 import java.time.Instant;
 import java.time.ZoneOffset;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -86,7 +84,7 @@ public final class TotalCaloriesBurnedRecordHelper
             case TOTAL_CALORIES_BURNED_RECORD_ENERGY_TOTAL:
                 return new AggregateParams(
                         TOTAL_CALORIES_BURNED_RECORD_TABLE_NAME,
-                        new ArrayList(Arrays.asList(ENERGY_COLUMN_NAME)),
+                        new ArrayList<>(List.of(ENERGY_COLUMN_NAME)),
                         START_TIME_COLUMN_NAME,
                         Double.class);
             default:
@@ -102,52 +100,40 @@ public final class TotalCaloriesBurnedRecordHelper
     }
 
     @Override
-    public double[] deriveAggregate(
-            Cursor cursor,
-            long startTime,
-            long endTime,
-            int groupSize,
-            long groupDelta,
-            String groupByColumnName) {
+    public double[] deriveAggregate(Cursor cursor, AggregateTableRequest request) {
         int index = 0;
-        long groupStartTime = startTime;
-        long groupEndTime = getGroupEndTime(groupStartTime, groupDelta, groupByColumnName);
+        List<Pair<Long, Long>> groupIntervals = request.getGroupSplitIntervals();
+
         List<Long> priorityList =
                 StorageUtils.getAppIdPriorityList(RECORD_TYPE_TOTAL_CALORIES_BURNED);
         MergeDataHelper mergeDataHelper =
                 new MergeDataHelper(cursor, priorityList, ENERGY_COLUMN_NAME, Double.class);
         DeriveTotalCaloriesBurnedHelper deriveTotalCaloriesBurnedHelper =
-                new DeriveTotalCaloriesBurnedHelper(startTime, endTime, priorityList);
-        double[] totalCaloriesBurnedArray = new double[groupSize];
-        while (index < groupSize) {
+                new DeriveTotalCaloriesBurnedHelper(
+                        groupIntervals.get(0).first,
+                        groupIntervals.get(groupIntervals.size() - 1).second,
+                        priorityList);
+        double[] totalCaloriesBurnedArray = new double[groupIntervals.size()];
+        for (Pair<Long, Long> groupInterval : groupIntervals) {
+            long groupStartTime = groupInterval.first;
+            long groupEndTime = groupInterval.second;
             // Based on the number of groups calculate aggregate for each group by calling
             // MergeDataHelper by eliminate duplicate for overlapping time interval
             double total = mergeDataHelper.readCursor(groupStartTime, groupEndTime);
             // For only TotalCaloriesBurned aggregate request we derive data from
             // ActiveCaloriesRecord and BasalMetabolicRateRecord for empty intervals
-            List<Pair<Instant, Instant>> emptyIntervalList = mergeDataHelper.getEmptyIntervals();
+            List<Pair<Instant, Instant>> emptyIntervalList =
+                    mergeDataHelper.getEmptyIntervals(
+                            Instant.ofEpochMilli(groupStartTime),
+                            Instant.ofEpochMilli(groupEndTime));
             if (emptyIntervalList.size() > 0) {
                 total += deriveTotalCaloriesBurnedHelper.getDerivedCalories(emptyIntervalList);
             }
-            groupStartTime = groupEndTime;
-            groupEndTime = getGroupEndTime(groupStartTime, groupDelta, groupByColumnName);
+
             totalCaloriesBurnedArray[index++] = total;
         }
-        if (deriveTotalCaloriesBurnedHelper != null) {
-            deriveTotalCaloriesBurnedHelper.closeCursors();
-        }
+        deriveTotalCaloriesBurnedHelper.closeCursors();
         return totalCaloriesBurnedArray;
-    }
-
-    private long getGroupEndTime(long groupStartTime, long groupByDelta, String groupByColumnName) {
-        if (groupByColumnName.equals(getPeriodGroupByColumnName())) {
-            // Calculate and return endtime for group Aggregation based on period
-            return (Instant.ofEpochMilli(groupStartTime).plus(groupByDelta, ChronoUnit.DAYS))
-                    .toEpochMilli();
-        } else {
-            // Calculate and return endtime for group Aggregation based on duration
-            return groupStartTime + groupByDelta;
-        }
     }
 
     @Override
